# couture

./: .gitignore  CLAUDE.md  README.md  TODO.md  baby_dress.py  corset_base_stretch.py  corset_pattern.py  docker-compose.yml  measurements.py  render.yaml  skirt_pattern.py  sleeve_pattern.py  stretch_pattern.py  test_bezier_validation.py
backend/: Dockerfile  README.md  database.py  pyproject.toml
backend/app/: README.md  main.py
backend/cli/: README.md  generate.py
backend/python/: pyproject.toml
backend/python/app/: main.py
backend/python/app/core/: measurements.py  stretch_pattern.py  svg_renderer.py
backend/python/app/measurements/: router.py
backend/python/app/modelist/: router.py  sleeve.py
backend/python/app/schemas/: shop.py
backend/python/tests/: test_api.py
backend/rust/: Cargo.toml
backend/tests/: README.md  test_api.py  test_bezier_validation.py  test_modelist.py
cli/: baby_dress.py  sleeve.py
docs/: DATA_FLOW.md  FRONT_PAGE_DESIGN.md  PAGES.md  README.md  VISION.md
front-end/web/: README.md
frontend/: README.md
frontend/mobile/: App.tsx  README.md  (+6 more)
mobile/: App.tsx  index.ts  metro.config.js  package-lock.json  package.json  tsconfig.json
old/: TODO.md  docker-compose.yml
placement_algorithm/: PHASE_2_COMPLETE.md  README.md  example.py  requirements.txt
proto/: designer.html  help.html  index.html  measurements.html  modelist.html  sewing.html  shop.html  silhouette.html
scripts/: launch_web.sh  run-backend.sh  run-mobile.sh
shared/: README.md  tsconfig.json
web/: Dockerfile  package.json  tsconfig.app.json
(+225 files in other folders)
